--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,11 @@
 body {
 
-    color: #f7f7f7;
+    background-color: #faf5f5;
+    text-align: "center";
 }
 .jumbotron {
     background-image: url("../images/nasa.jpg");
     background-size: 100% 100%;
     text-align: center;
+    color: cornsilk;
 }
